fixed alignment text

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -37,7 +37,7 @@
 }
 
 .mapLeft p{
-  width: 87%;
+  width: 95%;
   text-align: justify;
   text-justify: inter-word;
 }
